# shamble

./: README.md  todo.md
shamble-core/: .gitignore  Cargo.toml
shamble-core/src/: lib.rs  net.rs  sound_streams.rs
shamble-ui/: bun.lockb  index.html  package.json
shamble-ui/src/: main.ts  styles.css
shamble-ui/src-tauri/: Cargo.toml  tauri.conf.json
shamble-ui/src-tauri/src/: main.rs
