[package]
name = "shamble-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
cpal = "0.15.3"
crossbeam-channel = "0.5.14"
dirs = "6.0.0"
futures-lite = "2.6.0"
iroh = { version = "0.30.0", features = ["discovery-local-network"] }
rand = "0.8.5"
# TODO: only needed for the bin part, move to dev deps or a feature
tiny_http = "0.12.0"
# TODO: cut out only required features
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
